sample/retrieveUnpackaged/objects/LivelinkSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores environmental specific parameters for linking to the SEW Livelink ECM</description>
    <fields>
        <fullName>OpenDocumentURLSuffix__c</fullName>
        <description>The trailing static URL component for opening a Livelink document (suffix - after the object Id)</description>
        <inlineHelpText>The trailing static URL component for opening a Livelink document (suffix - after the object Id)</inlineHelpText>
        <label>OpenDocumentURLSuffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenFolderURLSuffix__c</fullName>
        <description>The trailing static URL component for opening a Livelink folder (suffix - after the object Id)</description>
        <inlineHelpText>The trailing static URL component for opening a Livelink folder (suffix - after the object Id)</inlineHelpText>
        <label>OpenFolderURLSuffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenObjectURL__c</fullName>
        <description>The static, common URL component for opening a Livelink object (node Id) - either a document or folder</description>
        <inlineHelpText>The static, common URL component for opening a Livelink object (node Id) - either a document or folder</inlineHelpText>
        <label>OpenObjectURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchLivelinkURL__c</fullName>
        <description>The static URL component for searching the Livelink ECM for historical content related to the customer or property.</description>
        <inlineHelpText>The static URL component for searching the Livelink ECM for historical content related to the customer or property.</inlineHelpText>
        <label>SearchLivelinkURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServerBase__c</fullName>
        <description>The base Livelink server URL applicable for the environment - e.g. http://llprod/</description>
        <inlineHelpText>The base Livelink server URL applicable for the environment - e.g. http://llprod/</inlineHelpText>
        <label>ServerBase</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Livelink Settings</label>
</CustomObject>